# dockerized-LLM

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Report.md  config.yml  pyproject.toml
app/: download_model.py  infer.py
app/features/: inference.py
chat_interface/: ui.py
